--- a/compose.yml
+++ b/compose.yml
@@ -58,6 +58,7 @@ services:
     env_file:
       - 'compose/aws.env'
     environment:
+      API_BASE_URL: http://your-backend:8080
       PORT: 3000
       NODE_ENV: development
       REDIS_HOST: redis
@@ -66,28 +67,27 @@ services:
     networks:
       - cdp-tenant
 
-  # your-backend:
-  #   image: defradigital/your-backend:${YOUR_BACKEND_VERSION:-latest}
-  #   ports:
-  #     - '3555:3555'
-  #   links:
-  #     - 'localstack:localstack'
-  #     - 'mongodb:mongodb'
-  #   depends_on:
-  #     localstack:
-  #       condition: service_healthy
-  #     mongodb:
-  #       condition: service_started
-  #   env_file:
-  #     - 'compose/aws.env'
-  #   environment:
-  #     PORT: 3555
-  #     NODE_ENV: development
-  #     LOCALSTACK_ENDPOINT: http://localstack:4566
-  #   networks:
-  #     - cdp-tenant
-
-################################################################################
+  your-backend:
+    image: defradigital/assurance-api
+    ports:
+      - '8085:8080'
+    links:
+      - 'localstack:localstack'
+      - 'mongodb:mongodb'
+    depends_on:
+      localstack:
+        condition: service_healthy
+      mongodb:
+        condition: service_started
+    env_file:
+      - 'compose/aws.env'
+    environment:
+      PORT: 8085
+      NODE_ENV: development
+      LOCALSTACK_ENDPOINT: http://localstack:4566
+      Mongo__DatabaseUri: mongodb://mongodb:27017
+    networks:
+      - cdp-tenant
 
 volumes:
   mongodb-data:
