--- a/compose.yml
+++ b/compose.yml
@@ -64,6 +64,9 @@ services:
       REDIS_HOST: redis
       LOCALSTACK_ENDPOINT: http://localstack:4566
       USE_SINGLE_INSTANCE_CACHE: true
+    volumes:
+      - ./:/app # Mount the current directory to /app
+      - /app/node_modules # Prevent overwriting node_modules
     networks:
       - cdp-tenant
 
