--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -13,7 +13,7 @@ sonar.links.scm=https://github.com/DEFRA/assurance-frontend
 sonar.links.issue=https://github.com/DEFRA/assurance-frontend/issues
 
 sonar.sources=src/
-sonar.exclusions=src/**/*.test.js
+sonar.exclusions=src/**/*.test.js,src/**/data/**/*
 sonar.tests=src/
 sonar.test.inclusions=src/**/*.test.js
 
