--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     "@hapi/yar": "^11.0.2",
     "aws-embedded-metrics": "^4.2.0",
     "babel-plugin-module-resolver": "^5.0.2",
+    "chart.js": "^4.4.8",
+    "chartjs-adapter-date-fns": "^3.0.0",
     "convict": "^6.2.4",
     "cssnano": "^7.0.6",
     "cssnano-preset-default": "^7.0.6",
@@ -84,6 +86,7 @@
     "cheerio": "^1.0.0",
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^12.0.2",
+    "css-loader": "^7.1.2",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-standard": "^17.1.0",
@@ -107,6 +110,7 @@
     "sass-embedded": "^1.80.6",
     "sass-loader": "^16.0.3",
     "source-map-loader": "^5.0.0",
+    "style-loader": "^4.0.0",
     "stylelint": "^16.10.0",
     "stylelint-config-gds": "^2.0.0",
     "terser-webpack-plugin": "^5.3.10",
