--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Build and Publish
         uses: DEFRA/cdp-build-action/build@main
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}as
+          github-token: ${{ secrets.GITHUB_TOKEN }}
       - name: Create Test Coverage Reports
         run: |
           npm ci
