--- a/package.json
+++ b/package.json
@@ -39,17 +39,19 @@
     "@babel/runtime": "^7.26.0",
     "@defra/hapi-tracing": "^1.0.0",
     "@elastic/ecs-pino-format": "^1.5.0",
-    "@hapi/boom": "10.0.1",
+    "@hapi/bell": "^13.1.0",
+    "@hapi/boom": "^10.0.1",
     "@hapi/catbox-memory": "^6.0.2",
     "@hapi/catbox-redis": "^7.0.2",
-    "@hapi/hapi": "^21.3.12",
-    "@hapi/inert": "^7.1.0",
-    "@hapi/vision": "^7.0.3",
-    "@hapi/yar": "^11.0.2",
+    "@hapi/cookie": "^12.0.0",
+    "@hapi/hapi": "^21.3.3",
+    "@hapi/inert": "^7.0.0",
+    "@hapi/vision": "^6.1.0",
     "aws-embedded-metrics": "^4.2.0",
     "babel-plugin-module-resolver": "^5.0.2",
     "chart.js": "^4.4.8",
     "chartjs-adapter-date-fns": "^3.0.0",
+    "config": "^3.3.9",
     "convict": "^6.2.4",
     "cssnano": "^7.0.6",
     "cssnano-preset-default": "^7.0.6",
@@ -62,9 +64,12 @@
     "lodash": "^4.17.21",
     "node-fetch": "^3.3.2",
     "nunjucks": "^3.2.4",
-    "pino": "^9.5.0",
-    "pino-pretty": "^13.0.0",
-    "undici": "^6.21.1"
+    "openid-client": "^5.6.0",
+    "pino": "^8.17.2",
+    "pino-pretty": "^10.3.1",
+    "undici": "^6.21.1",
+    "axios": "^1.6.7",
+    "handlebars": "^4.7.8"
   },
   "devDependencies": {
     "@babel/cli": "^7.25.9",
