--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "format:check": "prettier --check \"src/**/*.js\" \"**/*.{js,cjs,md,json,config.js,test.js}\"",
     "frontend:watch": "NODE_ENV=development webpack --watch",
     "git:pre-commit-hook": "npm run format:check && npm run lint && npm test",
+    "git:no-tests-pre-commit-hook": "npm run format:check && npm run lint",
     "postinstall": "npm run setup:husky && npm run build",
     "lint": "run-s lint:js lint:scss lint:types",
     "lint:fix": "eslint . --fix",
