--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "@hapi/cookie": "^12.0.0",
     "@hapi/hapi": "^21.3.3",
     "@hapi/inert": "^7.0.0",
-    "@hapi/vision": "^6.1.0",
+    "@hapi/vision": "^7.0.3",
     "aws-embedded-metrics": "^4.2.0",
     "babel-plugin-module-resolver": "^5.0.2",
     "chart.js": "^4.4.8",
@@ -59,6 +59,7 @@
     "date-fns": "^4.1.0",
     "global-agent": "^3.0.0",
     "govuk-frontend": "^5.7.1",
+    "handlebars": "^4.7.8",
     "hapi-pino": "^12.1.0",
     "hapi-pulse": "^3.0.1",
     "ioredis": "^5.4.1",
@@ -66,11 +67,9 @@
     "node-fetch": "^3.3.2",
     "nunjucks": "^3.2.4",
     "openid-client": "^5.6.0",
-    "pino": "^8.17.2",
-    "pino-pretty": "^10.3.1",
-    "undici": "^6.21.1",
-    "axios": "^1.6.7",
-    "handlebars": "^4.7.8"
+    "pino": "^9.5.0",
+    "pino-pretty": "^13.0.0",
+    "undici": "^6.21.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.25.9",
