--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -13,10 +13,16 @@ sonar.links.scm=https://github.com/DEFRA/assurance-frontend
 sonar.links.issue=https://github.com/DEFRA/assurance-frontend/issues
 
 sonar.sources=src/
-sonar.exclusions=src/**/*.test.js,src/**/data/**/*
+# Exclude test files, data, client-side code, stylesheets and configuration files from analysis
+sonar.exclusions=src/**/*.test.js,src/**/data/**/*,src/client/javascripts/**/*,src/client/stylesheets/**/*,src/config/**/*,src/**/README.md
+
 sonar.tests=src/
 sonar.test.inclusions=src/**/*.test.js
 
 sonar.javascript.lcov.reportPaths=./coverage/lcov.info
 
+# Exclude test files, data fixtures, client-side code, and infrastructure setup code from coverage
+sonar.coverage.exclusions=src/**/*.test.js,src/**/data/**/*,src/client/**/*,src/config/**/*,src/server/common/helpers/secure-context/**/*,src/server/common/helpers/proxy/**/*,src/server/plugins/**/*,src/server/auth/**/*
+
+# Exclude test files and data fixtures from duplication detection
 sonar.cpd.exclusions=src/**/*.test.js,src/**/data/**/*
