--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,11 +14,5 @@
     "types": ["jest"]
   },
   "exclude": [".cache", ".public", ".server", "coverage", "node_modules"],
-  "include": [
-    "**/*.cjs",
-    "**/*.js",
-    ".eslintrc.*",
-    ".prettierrc.*",
-    ".public/javascripts/project-history-chart.js"
-  ]
+  "include": ["**/*.cjs", "**/*.js", ".eslintrc.*", ".prettierrc.*"]
 }
