--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -26,3 +26,8 @@ sonar.coverage.exclusions=src/**/*.test.js,src/**/data/**/*,src/client/**/*,src/
 
 # Exclude test files and data fixtures from duplication detection
 sonar.cpd.exclusions=src/**/*.test.js,src/**/data/**/*
+
+# Exclude magic number warnings for profession-standard matrix (legitimate service standard IDs)
+sonar.issue.ignore.multicriteria=e1
+sonar.issue.ignore.multicriteria.e1.ruleKey=javascript:S109
+sonar.issue.ignore.multicriteria.e1.resourceKey=src/server/services/profession-standard-matrix.js
